[package]
name = "joinstr_wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
dirs = { workspace = true }
joinstr = { workspace = true }
libc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
url = { workspace = true }


