[package]
name = "simple_electrum_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "electrumsc"
path = "src/bin/daemon.rs"

[[bin]]
name = "electrumsc-cli"
path = "src/bin/cli.rs"

[dependencies]
miniscript = { workspace = true, features = ["serde", "base64"] }
bitcoin_slices = { workspace = true }
log = { workspace = true }
openssl = { workspace = true, features = ["vendored"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
hex_lit = { workspace = true }
electrsd = {version = "0.29.0", features = []}
