[package]
name = "simple_nostr_client"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
nostr = { workspace = true, features = ["nip04"] }
websocket = { workspace = true, features = ["sync", "sync-ssl"] }
backoff = { workspace = true }


[dev-dependencies]
nostrd = { workspace = true }
env_logger = "0.11.6"
joinstr = { workspace = true }
